--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,97 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
+:root {
+  --primary: #4a4a4a;
+  --dark: rgba(0, 0, 0, 0.82);
+  --secondary: #fed766;
+  --white: #ffffff;
+  --dark: black;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Grandstander", "sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--primary);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 900;
+}
+p {
+  font-weight: 600;
+}
+
+a {
+  color: var(--primary);
+  font-weight: 600;
+}
+p {
+  font-size: 23px;
+  font-weight: 600;
+}
+
+h1 {
+  font-size: 59px;
+}
+
+h2 {
+  font-size: 44px;
+  margin-bottom: 20px;
+}
+
+.container {
+  width: 88% !important;
+}
+
+p {
+  line-height: 1.8;
+}
+
+.font_2g {
+  font-size: 17px;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.text-black {
+  color: var(--dark);
+}
+
+@media (min-width: 992px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm {
+    max-width: 1200px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    height: auto !important;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-right: 0rem;
+    padding-left: 0rem;
+  }
+  p {
+    text-align: start;
+    font-size: 16px;
+  }
+  h2 {
+    font-size: 41px;
+    text-align: start;
+  }
 }
