--- a/src/index.css
+++ b/src/index.css
@@ -164,6 +164,19 @@ p {
   border-color: var(--e-global-color-03def09);
   outline: none;
   font-size: 35px;
+
+  font-size: 35px !important;
+  font-weight: 800;
+  letter-spacing: 2.1px;
+  fill: var(--e-global-color-03def09) !important;
+  color: var(--e-global-color-03def09) !important;
+  background-color: #fbe87f !important;
+  border-style: solid !important;
+  border-width: 4px 4px 4px 4px !important;
+  border-color: var(--e-global-color-03def09) !important;
+  border-radius: 10px 10px 10px 10px;
+  padding: 12px 40px;
+  font-weight: 800;
 }
 
 .custom_style5675 {
