--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,9 @@
   fill: var(--e-global-color-03def09);
   color: var(--e-global-color-03def09);
   background-color: #fbe87f;
-  border-style: solid;
-  border-width: 4px 4px 4px 4px;
-  border-color: var(--e-global-color-03def09);
+
+  border: 4px solid #4a4a4a !important;
+
   border-radius: 10px 10px 10px 10px;
   padding: 12px 40px;
 
@@ -69,24 +69,12 @@
   transition-duration: 0.3s;
   transition-timing-function: ease;
   transition-delay: 0s;
-
-  font-size: 35px !important;
-  font-weight: 800;
-  letter-spacing: 2.1px;
-  fill: var(--e-global-color-03def09) !important;
-  color: var(--e-global-color-03def09) !important;
-  background-color: #fbe87f !important;
-  border-style: solid !important;
-  border-width: 4px 4px 4px 4px !important;
-  border-color: var(--e-global-color-03def09) !important;
-  border-radius: 10px 10px 10px 10px;
-  padding: 12px 40px;
-  font-weight: 800;
 }
 
 .banner_btn:hover {
   color: var(--secondary);
   background-color: #00000091;
+  border: 4px solid #fbe87f !important;
 }
 
 /* //banner2 */
