--- a/src/index.css
+++ b/src/index.css
@@ -151,32 +151,11 @@ p {
   border-color: #4a4a4a !important;
   padding: 10px 10px;
   border-radius: 10px;
-  border-style: solid;
-  border-top-style: solid;
-  border-right-style: solid;
-  border-bottom-style: solid;
-  border-left-style: solid;
-  border-width: 4px 4px 4px 4px;
-  border-top-width: 4px;
-  border-right-width: 4px;
-  border-bottom-width: 4px;
-  border-left-width: 4px;
-  border-color: var(--e-global-color-03def09);
+
   outline: none;
   font-size: 35px;
 
-  font-size: 35px !important;
-  font-weight: 800;
-  letter-spacing: 2.1px;
-  fill: var(--e-global-color-03def09) !important;
-  color: var(--e-global-color-03def09) !important;
-  background-color: #fbe87f !important;
-  border-style: solid !important;
-  border-width: 4px 4px 4px 4px !important;
-  border-color: var(--e-global-color-03def09) !important;
-  border-radius: 10px 10px 10px 10px;
-  padding: 12px 40px;
-  font-weight: 800;
+  border: 4px solid #4a4a4a !important;
 }
 
 .custom_style5675 {
