--- a/src/index.css
+++ b/src/index.css
@@ -1,266 +1,266 @@
 * {
-  margin: 0px;
-  padding: 0px;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
+
 :root {
-  --primary: #4a4a4a;
-  --dark: #ff49b633;
-  --secondary: #f5f07e;
-  --white: #ffffff;
-  --dark: black;
+    --primary: #4a4a4a;
+    --dark: #ff49b633;
+    --secondary: #f5f07e;
+    --white: #ffffff;
+    --dark: black;
 }
+
 body {
-  overflow-x: hidden;
-  margin: 0;
-  /* font-family: "Asap Condensed", "Merienda";
+    overflow-x: hidden;
+    margin: 0;
+    /* font-family: "Asap Condensed", "Merienda";
   font-family: "Merienda", cursive; */
-  font-family: "Permanent Marker", cursive;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: var(--primary);
+    font-family: "Permanent Marker", cursive;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: var(--primary);
 }
 
 .bg__color {
-  background-color: #fbe87f;
+    background-color: #fbe87f;
 }
 
 .bg__blue {
-  background-color: #9ddcf7;
+    background-color: #9ddcf7;
 }
 
 .bg__yellow {
-  background-color: #fbe87f;
+    background-color: #fbe87f;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-weight: 900;
-  color: black;
+    font-weight: 900;
+    color: black;
 }
 
 .App {
-  overflow-x: hidden !important ;
+    overflow-x: hidden !important;
 }
 
 p {
-  font-weight: 400;
+    font-weight: 400;
 }
 
 a {
-  color: var(--primary);
-  font-weight: 600;
-  transition: all 0.2s ease-in-out;
+    color: var(--primary);
+    font-weight: 600;
+    transition: all 0.2s ease-in-out;
 }
 
-.li > a {
-  transition: all 0.5s ease-in-out;
+.li>a {
+    transition: all 0.5s ease-in-out;
 }
 
-li > a:hover {
-  color: #f041f7;
+li>a:hover {
+    color: #f041f7;
 }
 
-.nav-items > a > i:hover {
-  color: #f041f7;
+.nav-items>a>i:hover {
+    color: #f041f7;
 }
 
 p {
-  font-size: 26px;
-  font-weight: 400;
+    font-size: 26px;
+    font-weight: 400;
 }
 
 h1 {
-  font-size: 63px;
-  color: black;
+    font-size: 63px;
+    color: black;
 }
 
 h2 {
-  font-size: 48px;
-  margin-bottom: 20px;
+    font-size: 48px;
+    margin-bottom: 20px;
 }
 
 .container {
-  width: 88% !important;
+    width: 88% !important;
 }
 
 p {
-  line-height: 1.8;
+    line-height: 1.8;
 }
 
 .font_2g {
-  font-size: 19px;
-  font-weight: 600;
-  font-style: italic;
+    font-size: 19px;
+    font-weight: 600;
+    font-style: italic;
 }
 
 .text-black {
-  color: var(--dark);
+    color: var(--dark);
 }
 
 .text679 {
-  color: white;
+    color: white;
 }
 
 @media (max-width: 960px) {
-  .text679 {
-    font-size: 30px;
-  }
-  .text676 {
-    font-size: 15px !important;
-  }
-  .img__footer {
-    width: 60% !important;
-  }
+    .text679 {
+        font-size: 30px;
+    }
+    .text676 {
+        font-size: 15px !important;
+    }
+    .img__footer {
+        width: 60% !important;
+    }
 }
 
 @media (max-width: 1256px) {
-  .text676 {
-    font-size: 19px;
-  }
-  .text679 {
-    font-size: 40px;
-  }
-  .text670 {
-    font-size: 50px;
-  }
+    .text676 {
+        font-size: 19px;
+    }
+    .text679 {
+        font-size: 40px;
+    }
+    .text670 {
+        font-size: 50px;
+    }
 }
 
 @media (min-width: 992px) {
-  .container,
-  .container-lg,
-  .container-md,
-  .container-sm {
-    max-width: 1200px;
-  }
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm {
+        max-width: 1200px;
+    }
 }
 
 .container .container-fluid {
-  overflow-x: hidden !important;
+    overflow-x: hidden !important;
 }
 
 .div_style2 {
-  background-color: #fbe87f;
-  border-color: #4a4a4a !important;
-  padding: 10px 10px;
-  border-radius: 10px;
-
-  outline: none;
-  font-size: 35px;
-
-  border: 4px solid #4a4a4a !important;
+    background-color: #fbe87f;
+    border-color: #4a4a4a !important;
+    padding: 10px 10px;
+    border-radius: 10px;
+    outline: none;
+    font-size: 35px;
+    border: 4px solid #4a4a4a !important;
 }
 
 .custom_style5675 {
-  background-color: #fbe87f;
-  border: none;
-  outline: none;
-  padding: 10px 10px;
+    background-color: #fbe87f;
+    border: none;
+    outline: none;
+    padding: 10px 10px;
 }
 
 .btn-primary {
-  background-color: #4a4a4a !important;
-  border-color: #4a4a4a !important;
+    background-color: #4a4a4a !important;
+    border-color: #4a4a4a !important;
 }
 
 .btn-primary:focus {
-  outline: none !important;
-  border: none !important;
+    outline: none !important;
+    border: none !important;
 }
 
 .gap_8 {
-  gap: 2px;
+    gap: 2px;
 }
 
 input[type="number"] {
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
-  appearance: textfield;
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    appearance: textfield;
 }
+
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
+    -webkit-appearance: none;
 }
 
 @media screen and (max-width: 768px) {
-  .container {
-    height: auto !important;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-right: 0rem;
-    padding-left: 0rem;
-  }
-
-  div.navbar-links {
-    top: 57px !important;
-    border-top: 2px solid #fed766 !important;
-  }
-
-  .navbar-container {
-    max-width: 100% !important;
-  }
-
-  .logo__title {
-    font-size: 40px !important;
-  }
-  .banner_btn {
-    font-size: 20px !important;
-  }
-
-  .banner_img {
-    height: 600px !important;
-  }
-
-  h1 {
-    font-size: 50px;
-    color: black;
-  }
-
-  .h_main {
-    padding-top: 37px !important;
-    padding-bottom: 37px !important;
-  }
-
-  .text670 {
-    font-size: 40px;
-  }
-  p {
-    text-align: start;
-    font-size: 18px;
-  }
-  h2 {
-    font-size: 32px;
-    text-align: start;
-  }
+    .container {
+        height: auto !important;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        padding-right: 0rem;
+        padding-left: 0rem;
+    }
+    div.navbar-links {
+        top: 57px !important;
+        border-top: 2px solid #fed766 !important;
+    }
+    .navbar-container {
+        max-width: 100% !important;
+    }
+    .logo__title {
+        font-size: 40px !important;
+    }
+    .banner_btn {
+        font-size: 20px !important;
+    }
+    .banner_img {
+        height: 600px !important;
+    }
+    h1 {
+        font-size: 50px;
+        color: black;
+    }
+    .h_main {
+        padding-top: 37px !important;
+        padding-bottom: 37px !important;
+    }
+    .text670 {
+        font-size: 40px;
+    }
+    p {
+        text-align: start;
+        font-size: 18px;
+    }
+    h2 {
+        font-size: 32px;
+        text-align: start;
+    }
 }
+
 @media (max-width: 502px) {
-  .text679 {
-    font-size: 30px;
-  }
-  .text676 {
-    font-size: 15px !important;
-  }
-  .text670 {
-    font-size: 30px;
-  }
+    .text679 {
+        font-size: 30px;
+    }
+    .text676 {
+        font-size: 15px !important;
+    }
+    .text670 {
+        font-size: 30px;
+    }
 }
 
 @media (max-width: 700px) {
-  .card__img {
-    height: 500px;
-    object-fit: cover;
-  }
+    .card__img {
+        height: 500px;
+        object-fit: cover;
+    }
 }
 
 @media (min-width: 1600px) {
-  .text676 {
-    font-size: 37px;
-  }
+    .text676 {
+        font-size: 37px;
+    }
+}
+
+.banner_cont {
+    width: 50%;
 }
