--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -30,7 +30,7 @@ a {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  max-width: 60%;
+  width: 67%;
   margin: 0 auto;
   padding: 0.9rem;
   color: var(--primary);
